fixed alignment in dashboard

--- a/style.css
+++ b/style.css
@@ -168,6 +168,10 @@ body{
   gap: 20px;
 }
 
+.current-weather {
+  grid-column: 1 / -1 !important;
+}
+
 .temp-card {
   flex: 1 1 250px;
   background-color: #f8f8f8;
